--- a/data-engineering-2024/02-workflow-orchestration/mage-zoomcamp/docker-compose.yml
+++ b/data-engineering-2024/02-workflow-orchestration/mage-zoomcamp/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - 6789:6789
     volumes:
       - .:/home/src/
-      #- ~/Documents/secrets/personal-gcp.json:/home/src/personal-gcp.json
+      - ~/personal-gcp.json:/home/src/personal-gcp.json
     restart: on-failure:5
   postgres:
     image: postgres:14
@@ -34,14 +34,5 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "${POSTGRES_PORT}:5432"
-    volumes:
-      - "./ny_taxi_postgres_data:/var/lib/postgresql/data:rw"
-  #   expose:
-  #     - 5432
-  #pgadmin:
-  #   image: dpage/pgadmin4
-  #   environment:
-  #     - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-  #     - PGADMIN_DEFAULT_PASSWORD=root
-  #   ports:
-  #     - "8080:80"
+    #volumes:
+    #  - "./pgdata:/var/lib/postgresql/data:rw"
