--- a/data-engineering-2024/02-workflow-orchestration/mage-zoomcamp/magic-zoomcamp/pipelines/green_taxi_etl/metadata.yaml
+++ b/data-engineering-2024/02-workflow-orchestration/mage-zoomcamp/magic-zoomcamp/pipelines/green_taxi_etl/metadata.yaml
@@ -86,7 +86,7 @@ settings:
 spark_config: {}
 tags: []
 type: python
-updated_at: '2024-02-05T21:40:45+00:00'
+updated_at: '2024-02-05 22:19:46'
 uuid: green_taxi_etl
 variables_dir: /home/src/mage_data/magic-zoomcamp
 widgets: []
