--- a/data-engineering-2024/02-workflow-orchestration/mage-zoomcamp/magic-zoomcamp/pipelines/green_taxi_etl/metadata.yaml
+++ b/data-engineering-2024/02-workflow-orchestration/mage-zoomcamp/magic-zoomcamp/pipelines/green_taxi_etl/metadata.yaml
@@ -84,9 +84,10 @@ run_pipeline_in_one_process: false
 settings:
   triggers: null
 spark_config: {}
-tags: []
+tags:
+- etl
 type: python
-updated_at: '2024-02-05 22:19:46'
+updated_at: '2024-02-05T22:19:46+00:00'
 uuid: green_taxi_etl
 variables_dir: /home/src/mage_data/magic-zoomcamp
 widgets: []
