--- a/data-engineering-2024/02-workflow-orchestration/mage-zoomcamp/magic-zoomcamp/pipelines/green_taxi_etl_parameterized/metadata.yaml
+++ b/data-engineering-2024/02-workflow-orchestration/mage-zoomcamp/magic-zoomcamp/pipelines/green_taxi_etl_parameterized/metadata.yaml
@@ -3,72 +3,63 @@ blocks:
   color: null
   configuration: {}
   downstream_blocks:
-  - transform_staged_data
+  - clean_taxi_data
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
-  name: load_taxi_gcs
+  name: load_api_data
   retry_config: null
   status: executed
   timeout: null
   type: data_loader
   upstream_blocks: []
-  uuid: load_taxi_gcs
+  uuid: load_api_data
 - all_upstream_blocks_executed: true
   color: null
   configuration: {}
   downstream_blocks:
-  - write_taxi_to_biqquery
+  - taxi_to_gcs_parquet_parameterized
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
-  name: transform_staged_data
+  name: clean_taxi_data
   retry_config: null
   status: executed
   timeout: null
   type: transformer
   upstream_blocks:
-  - load_taxi_gcs
-  uuid: transform_staged_data
+  - load_api_data
+  uuid: clean_taxi_data
 - all_upstream_blocks_executed: true
   color: null
-  configuration:
-    data_provider: bigquery
-    data_provider_profile: default
-    data_provider_schema: ny_taxi
-    data_provider_table: green_trip
-    dbt: {}
-    disable_query_preprocessing: false
-    export_write_policy: append
-    limit: 1000
-    use_raw_sql: false
+  configuration: {}
   downstream_blocks: []
   executor_config: null
   executor_type: local_python
   has_callback: false
-  language: sql
-  name: write_taxi_to_biqquery
+  language: python
+  name: taxi_to_gcs_parquet_parameterized
   retry_config: null
-  status: executed
+  status: updated
   timeout: null
   type: data_exporter
   upstream_blocks:
-  - transform_staged_data
-  uuid: write_taxi_to_biqquery
+  - clean_taxi_data
+  uuid: taxi_to_gcs_parquet_parameterized
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
 conditionals: []
-created_at: '2024-02-05 22:35:32.036955+00:00'
+created_at: '2024-02-04 15:59:41.240841+00:00'
 data_integration: null
 description: null
 executor_config: {}
 executor_count: 1
 executor_type: null
 extensions: {}
-name: gcs_to_bigquery
+name: green_taxi_etl_parameterized
 notification_config: {}
 remote_variables_dir: null
 retry_config: {}
@@ -79,7 +70,7 @@ spark_config: {}
 tags:
 - etl
 type: python
-updated_at: '2024-02-05T23:15:13+00:00'
-uuid: gcs_to_bigquery
+updated_at: '2024-02-06 17:53:36'
+uuid: green_taxi_etl_parameterized
 variables_dir: /home/src/mage_data/magic-zoomcamp
 widgets: []
