--- a/data-engineering-2024/02-workflow-orchestration/mage-zoomcamp/magic-zoomcamp/pipelines/test_config/metadata.yaml
+++ b/data-engineering-2024/02-workflow-orchestration/mage-zoomcamp/magic-zoomcamp/pipelines/test_config/metadata.yaml
@@ -94,9 +94,10 @@ run_pipeline_in_one_process: false
 settings:
   triggers: null
 spark_config: {}
-tags: []
+tags:
+- etl
 type: python
-updated_at: '2024-02-05 21:44:10'
+updated_at: '2024-02-05T21:44:10+00:00'
 uuid: test_config
 variables_dir: /home/src/mage_data/magic-zoomcamp
 widgets: []
