--- a/data-engineering-2024/04-analytics-engineering/taxi_rides_ny/macros/macros_properties.yml
+++ b/data-engineering-2024/04-analytics-engineering/taxi_rides_ny/macros/macros_properties.yml
@@ -11,7 +11,7 @@ macros:
           payment_type value.
           Must be one of the accepted values, otherwise the macro will return null
 
-  - name: safe_cast_to_int64
+  - name: safe_cast_to_int
     description: |
       This macro safely casts a string column to a float64 type and then to an int64 type. It's useful for converting numeric string representations to integer values while handling potential casting errors gracefully.
       In BigQuery, just using safe_cast(str as INT64) will give a null result if str = '1.0', for example.
